@@ -18,7 +18,7 @@ depth: 1
 
 ### Bug fixes
 
- * ...
+ * Update system check for overwriting storage backends to recognise the `STORAGES` setting introduced in Django 4.2 (phijma-leukeleu)
 
 ### Documentation
 
