@@ -188,8 +188,17 @@ def wagtail_admin_base_url_check(app_configs, **kwargs):
 @register("file_overwrite")
 def file_overwrite_check(app_configs, **kwargs):
     from django.conf import settings
+    from django import VERSION as DJANGO_VERSION
 
-    file_storage = getattr(settings, "DEFAULT_FILE_STORAGE", None)
+    if DJANGO_VERSION >= (5, 1):
+        file_storage = getattr(settings, "STORAGES")["default"]["BACKEND"]
+    elif DJANGO_VERSION >= (4, 2):
+        try:
+            file_storage = getattr(settings, "STORAGES")["default"]["BACKEND"]
+        except AttributeError:
+            file_storage = getattr(settings, "DEFAULT_FILE_STORAGE", None)
+    else:
+        file_storage = getattr(settings, "DEFAULT_FILE_STORAGE", None)
 
     errors = []
 
